# ESC-PROJECT-STATS

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
analyses/: 01_clean_and_audit.py  02_descriptives.py  03_primary_tests.py  04_effect_sizes_and_cis.py  05_reliability.py  06_sensitivity.py  07_multiple_comparisons.py  08_tables_and_figures.py  09_manuscript_numbers.py
data/raw/: NOWS_data__1_.xlsx
docs/: reproduction_guide.md
docs/proofs/: cronbach_alpha_derivation.md  effect_size_formulas.md  hodges_lehmann_derivation.md  mcnemar_exact_derivation.md  wilcoxon_signed_rank_derivation.md
manuscript/: limitations.md  methods.md  results.md  squire_checklist.md  statistical_analysis_plan.md
results/logs/: cleaning_audit.json  session_info.txt  transcript_reconciliation.md
results/tables/: effect_sizes.csv  primary_outcomes_adjusted.csv  primary_outcomes_raw.csv  supp_table_s1_missingness.csv  supp_table_s1_missingness.docx  supp_table_s1_missingness.tex  supp_table_s2_sensitivity.csv  supp_table_s2_sensitivity.docx  supp_table_s2_sensitivity.tex  table1_demographics.csv  table1_demographics.docx  table1_demographics.tex  table2_primary_outcomes.docx  (+7 more)
tests/: R_reference_outputs.json  conftest.py  generate_R_reference.R  test_against_R.py  test_against_prior_transcript.py  test_against_scipy.py  test_bootstrap_reproducibility.py  test_cronbach_alpha_formula.py  test_domain_scores.py  test_hodges_lehmann.py  test_mcnemar_hand.py  test_reverse_scoring.py  test_stats_additional.py  test_wilcoxon_hand.py
(+20 files in other folders)
